<resources>
    <string name="app_name">易发电影</string>

    <string name="iloveshrae">我爱分享</string>
    <string name="mycollect">我的收藏</string>
    <string name="help">新手帮助</string>
    <string name="withdrawals">我要提现</string>
    <string name="present_record">体现记录</string>
    <string name="share_record">分享记录</string>
    <string name="personal_data">个人资料</string>
    <string name="account_security">账户与安全</string>
    <string name="modif_password">修改密码</string>
    <string name="clear_cache">清除缓存</string>
    <string name="updates">检查更新</string>
</resources>
